# Tesseract_Glue

./: CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  LICENSE  MANIFEST.in  Pipfile  README.rst  conanfile.py  cppan.yml  pyproject.toml  requirements-ci.txt  requirements-cibuildwheel.txt  requirements-dev.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: tox_matrix.yml  wheels.yml
builders/: compiler_info.py  conan.py  conan_libs.py  deps.py  local_backend.py  pybind11.py  pybind11_builder.py
ci/cibuildwheel/conan_profiles/Linux/: linux_build_profile.ini
ci/cibuildwheel/conan_profiles/Macos/: mac_host_profile.ini
ci/docker/deploy/devpi/: Dockerfile
ci/docker/deploy/devpi/test/linux/: Dockerfile
ci/docker/deploy/devpi/test/windows/source/: Dockerfile
ci/docker/deploy/devpi/test/windows/whl/: Dockerfile
ci/docker/linux/jenkins/: Dockerfile
ci/docker/linux/package/: Dockerfile
ci/docker/linux/package/conan/: profile.ini
ci/docker/linux/tox/: Dockerfile  apt-packages.txt  requirements-conan-build.txt
ci/docker/linux/tox/conan/amd64/: settings.yml
ci/docker/shared/chocolatey/: Install-Python.ps1  packages.config  visual_studio.config
ci/docker/shared/msvc/: buildtools.json
ci/docker/shared/python/: requirements-ci.txt  requirements-extras.txt
ci/docker/windows/: Dockerfile  startup.bat  startup.reg
ci/docker/windows/test/msvc/: Dockerfile
ci/docker/windows/tox/: Dockerfile
ci/docker/windows/tox/chocolatey/: packages.config  verifyenv.ps1
ci/docker/windows/tox/conan/: profile.ini
ci/docker/windows/tox_no_vs/: Dockerfile
ci/jenkins/: defaultParameters.yaml  plugins.txt
ci/jenkins/scripts/: configs.groovy  devpi.groovy  packaging.groovy  sonarqube.groovy  tox.groovy
ci/scripts/: create_uv_config.sh  new-uv-global-config.ps1
cmake/: build_deps.cmake
contrib/: build_linux_wheels.sh  build_mac_wheel.sh  build_windows.ps1
docs/source/: about.rst  conf.py  examples.rst  index.rst  publicapi.rst  uiucprescon.ocr.languages.rst  uiucprescon.ocr.rst
ocr/: CMakeLists.txt  __init__.py  engine.py  glue.cpp  hello.cpp  reader.h  reader.py  reader2.cpp  reader2.h  tesseractwrap.cpp  utils.h
requirements/: requirements-ci-freeze.txt  requirements-ci.txt  requirements-conan.txt  requirements-dev-freeze.txt  requirements-dev.in  requirements-dev.txt  requirements-extras.txt  requirements.in
scripts/: build_linux_wheels.sh  build_mac_wheel.sh  build_windows.ps1
scripts/resources/package_linux/: Dockerfile  make-wheel.sh
scripts/resources/windows/: Dockerfile
src/uiucprescon/ocr/: CMakeLists.txt  Capabilities.cpp  Capabilities.h  Image.cpp  Image.h  ImageLoaderStrategies.cpp  ImageLoaderStrategies.h  __init__.py  engine.py  fileLoader.cpp  fileLoader.h  glue.cpp  glueExceptions.cpp  glueExceptions.h  languages.py  reader.cpp  reader.h  reader.py  reader2.cpp  reader2.h  tesseractwrap.cpp  utils.cpp
tests/: CMakeLists.txt  conftest.py  engine.feature  test-main.cpp  test_basic.cpp  test_basic.py  test_capabilties.py  test_engine_feature.py  test_integration.py  test_languages.py  test_load_image.py  test_reader.py
tests/feature/: test_engine_feature.py
tests/features/: engine.feature  test_engine_feature.py
uiucprescon/ocr/: CMakeLists.txt  Capabilities.cpp  Capabilities.h  Image.cpp  Image.h  ImageLoaderStrategies.cpp  ImageLoaderStrategies.h  __init__.py  capabilities.py  engine.py  fileLoader.cpp  fileLoader.h  glue.cpp  glue.h  glueExceptions.cpp  glueExceptions.h  languages.py  reader.cpp  reader.h  reader.py  reader2.cpp  reader2.h  tesseractwrap.cpp  utils.cpp
vars/: runJenkinsPipeline.groovy
