[metadata]
name = uiucprescon.ocr
version = 0.1.2dev0
url = http://www.library.illinois.edu/dccdocs/ocr
download_url = https://github.com/UIUCLibrary/ocr
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Image to text processing using Google Tesseract
long_description = file: README.rst
long_description_content_type = text/x-rst
license = University of Illinois/NCSA Open Source License
license_file = LICENSE
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.6
zip_safe = False

[tool:pytest]
testpaths = tests
addopts = --verbose -s
markers =
    integration: more expensive tests that touch files
;    expensive
norecursedirs = features build
junit_family=xunit1

[build_sphinx]
source-dir = docs/source
build-dir = build/docs
all_files = 1

[aliases]
test = pytest


[coverage:run]
relative_files = True

[coverage:report]
exclude_lines =
    raise NotImplementedError

[coverage:html]
directory = reports/coverage

[coverage:paths]
source = uiucprescon/
